--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "indicatorts": "^1.0.14",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.6.4",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@wonse/eslint-config": "^0.0.3",
     "autoprefixer": "10.4.16",
-    "eslint-config-next": "13.5.2",
     "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "13.5.2",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "^2.15.1",
@@ -41,6 +48,7 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-storybook": "^0.6.14",
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "typescript": "5.2.2"
   }
